<resources>
    <string name="app_name">Bottom sheet</string>
    <string name="android_working_with_bottom">Android Working with Bottom\n\n Usage
BottomSheetBehavior works in tandem with CoordinatorLayout to let you display content on a Bottom sheet (a layer on top of the main content), perform enter/exit animations, respond to dragging/swiping gestures, etc.

Bottom sheets have 5 states:

STATE_COLLAPSED: The bottom sheet is visible but only showing its peek height. This state is usually the ‘resting position’ of a Bottom Sheet. The peek height is chosen by the developer and should be enough to indicate there is extra content, allow the user to trigger an action or expand the bottom sheet.
STATE_EXPANDED: The bottom sheet is visible and its maximum height and it is neither dragging or settling (see below).
STATE_DRAGGING: The user is actively dragging the bottom sheet up or down.
STATE_SETTLING: The bottom sheet is settling to specific height after a drag/swipe gesture. This will be the peek height, expanded height, or 0, in case the user action caused the bottom sheet to hide.
STATE_HIDDEN: The bottom sheet is no longer visible.
If you’re already using CoordinatorLayout for your activity, adding a bottom sheet is trivial:

Add any View as a direct child of CoordinatorLayout.
Apply the behavior by adding the following xml attribute app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
Set the desired behavior flags
app:behavior_hideable whether this bottom sheet can be hidden by dragging it down.
app:behavior_peekHeight the peek height for the collapsed state.
app:behavior_skipCollapsed if the bottom sheet is hideable, and this is set to true, it does not have a collapsed state.
To programmatically control the bottom sheet you can call the setState method on the BottomSheetBehavior. A common pattern is setting a peek height and setting the state to collapsed to make it visible to the user:


bottomSheetBehavior.se</string>
    <string name="more">More</string>
    <string name="expend">Expend</string>
    <string name="collapsed">Collapsed</string>
    <string name="there_are_two_types_of_bottom_sheets_persistent_bottom_sheet_and_modal_bottom_sheet">There are two types of bottom sheets, Persistent Bottom Sheet and Modal Bottom Sheet.</string>
    <string name="open_bottom_sheet">Open bottom sheet</string>
    <string name="x_button_clicked">X button clicked</string>
    <string name="email_a_copy">Email a copy</string>
    <string name="make_a_copy">Make a copy</string>
    <string name="get_link">Get Link</string>
    <string name="share">Share</string>
    <string name="preview">Preview</string>
    <string name="show_bottom_sheet">Show Bottom Sheet</string>
    <string name="show_bottom_sheet_dialog">Show Bottom Sheet Dialog</string>
    <string name="show_bottom_sheet_dialog_fragment">Show Bottom Sheet Dialog Fragment</string>
    <string name="status">Status</string>
</resources>
