<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp">

        <Button
            android:id="@+id/more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more" />

        <Button
            android:id="@+id/expend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expend" />

        <Button
            android:id="@+id/collapsed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/collapsed" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/there_are_two_types_of_bottom_sheets_persistent_bottom_sheet_and_modal_bottom_sheet"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
    <!--app:behavior_hidable="true" to move completely out of the window
    app:layout_insetEdge="bottom" to give floating action button support-->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@android:color/holo_blue_light"
        app:behavior_hideable="false"
        app:behavior_peekHeight="10dp"
        app:layout_behavior="@string/bottom_sheet_behavior"

        app:layout_insetEdge="bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:text="@string/android_working_with_bottom"
            android:textSize="16sp" />
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="8dp"
        android:src="@drawable/ic_close"
        app:fabSize="normal"
        app:layout_dodgeInsetEdges="bottom" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>