<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <!-- NOTE: This list should be displayed in a list
    instead of nested layouts -->

    <TextView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableStart="@drawable/ic_remove_red_eye_black_24dp"
        android:drawablePadding="15dp"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:paddingRight="10dp"
        android:paddingBottom="8dp"
        android:text="@string/preview"
        android:textColor="#737373"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableStart="@drawable/ic_share_black_24dp"
        android:drawablePadding="15dp"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:paddingRight="10dp"
        android:paddingBottom="8dp"
        android:text="@string/share"
        android:textColor="#737373"
        android:textSize="16sp" />

    <TextView
android:id="@+id/getLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableStart="@drawable/ic_link_black_24dp"
        android:drawablePadding="15dp"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:paddingRight="10dp"
        android:paddingBottom="8dp"
        android:text="@string/get_link"
        android:textColor="#737373"
        android:textSize="16sp" />

    <TextView
android:id="@+id/makeACopy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableStart="@drawable/ic_content_copy_black_24dp"
        android:drawablePadding="15dp"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:paddingRight="10dp"
        android:paddingBottom="8dp"
        android:text="@string/make_a_copy"
        android:textColor="#737373"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/emailACopy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawablePadding="15dp"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:paddingRight="10dp"
        android:paddingBottom="8dp"
        android:text="@string/email_a_copy"
        android:textColor="#737373"
        android:textSize="16sp" />

</LinearLayout>